--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -10,9 +10,9 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1325px) {
   #ostrich {
     position: absolute;
-    bottom: 50px;
+    top: -70px;
   }
   }
